--- a/estilos.css
+++ b/estilos.css
@@ -30,15 +30,15 @@ h1 {
     border-radius: 5px;
     border-style: solid;
 }
-#navIndex {
-    font-size: 20px;
-    color:aliceblue;
-    border:aquamarine;
-    border-radius: 10%;;
-    border-style: solid;
+
+.navbar {
+   display: flex;
+   justify-content: space-evenly;
+   flex: 1;
 }
-nav ul li {
-    display: inline;
+.navbar li {
+    border: 2px, aquamarine, solid;
+
 }
 h3 {
     color: black;
@@ -73,10 +73,16 @@ width: 89%;
 }
 .encabezado {
     background-color:aquamarine;
-    height: 75px;
+    height: 100%;
+    width: 600 px;
+    object-position: center;
 }
 #imagenes {
-    height: 75px;
+    height: 100%;
+    width: 100% px;
+    margin: 15px;
+    position:sticky;
+    left: 20%;
 }
 .boton1 {
     color: black;
@@ -119,7 +125,7 @@ width: 89%;
     font-size: 20px;
     } 
 .inicio {
-        color: black;
+    color: black;
         
     }
 .inicio: :checked {
@@ -151,4 +157,22 @@ width: 89%;
             color:aliceblue;
             background-color:aqua;
             } 
-
+.datosPersonales {
+    display: inline;
+    background: aquamarine;
+}
+@media only screen and (min-width:320px) and (max-width: 500px) {
+    .navbar {flex-direction: column;}
+    .catalogo {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr ;}
+    .datosPersonales {
+        background-position: center;
+        background-color: blueviolet;}
+    h2 {color: aquamarine;
+        margin: 10px;
+    }
+    #imagenes {height: 400px;}
+    #barraDeBusqueda {width: 90%;}
+    .mapa { width: 450px;}
+    
